--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       	</select>
        
       	<label for="textarea">Current values:</label>
-   		<input type="text" name="sensorX" id="sensorX" value=""  />
-   		<input type="text" name="sensorY" id="sensorY" value=""  />
-   		<input type="text" name="sensorZ" id="sensorZ" value=""  />
-		<input type="text" name="timestamp" id="timestamp" value=""  />
+   		<input type="text" name="sensorX" id="sensorX" value="X axis"  />
+   		<input type="text" name="sensorY" id="sensorY" value="Y axis"  />
+   		<input type="text" name="sensorZ" id="sensorZ" value="Z axis"  />
+		<input type="text" name="timestamp" id="timestamp" value="timestamp"  />
    		
         <label for="slider">Update (ms):</label>
     	<input id="slider" type="range" name="slider" value="3000" min="0" max="10000" />
